[gd_scene load_steps=7 format=3 uid="uid://c2k7pb4uv08f1"]

[ext_resource type="Script" path="res://debugging/PokemonVisualizer.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/PokemonSpecies.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://wt2qvudx1tux" path="res://Graphics/Pictures/types.png" id="4"]

[sub_resource type="Resource" id="6"]
script = ExtResource("2")
ID = "GALLADE"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vodn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_577xq"]
Panel/styles/panel = SubResource("StyleBoxFlat_5vodn")

[node name="PokemonVisualizer" type="Node2D"]
script = ExtResource("1")
pokemon_species = SubResource("6")

[node name="Stats" type="VBoxContainer" parent="."]
offset_top = 192.0
offset_right = 260.0
offset_bottom = 368.0
theme = SubResource("Theme_577xq")
alignment = 1

[node name="HP" type="HBoxContainer" parent="Stats"]
layout_mode = 2
alignment = 1

[node name="Stat" type="Label" parent="Stats/HP"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP:"

[node name="Value" type="Label" parent="Stats/HP"]
layout_mode = 2
text = "000"

[node name="Bar" type="Panel" parent="Stats/HP"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarShade" type="Panel" parent="Stats/HP/Bar"]
modulate = Color(0, 0, 0, 0.207843)
layout_mode = 0
size_flags_horizontal = 3

[node name="ATTACK" type="HBoxContainer" parent="Stats"]
layout_mode = 2
alignment = 1

[node name="Stat" type="Label" parent="Stats/ATTACK"]
layout_mode = 2
size_flags_horizontal = 3
text = "ATTACK:"

[node name="Value" type="Label" parent="Stats/ATTACK"]
layout_mode = 2
text = "000"

[node name="Bar" type="Panel" parent="Stats/ATTACK"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarShade" type="Panel" parent="Stats/ATTACK/Bar"]
modulate = Color(0, 0, 0, 0.207843)
layout_mode = 0
size_flags_horizontal = 3

[node name="DEFENSE" type="HBoxContainer" parent="Stats"]
layout_mode = 2
alignment = 1

[node name="Stat" type="Label" parent="Stats/DEFENSE"]
layout_mode = 2
size_flags_horizontal = 3
text = "DEFENSE:"

[node name="Value" type="Label" parent="Stats/DEFENSE"]
layout_mode = 2
text = "000"

[node name="Bar" type="Panel" parent="Stats/DEFENSE"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarShade" type="Panel" parent="Stats/DEFENSE/Bar"]
modulate = Color(0, 0, 0, 0.207843)
layout_mode = 0
size_flags_horizontal = 3

[node name="SPATTACK" type="HBoxContainer" parent="Stats"]
layout_mode = 2
alignment = 1

[node name="Stat" type="Label" parent="Stats/SPATTACK"]
layout_mode = 2
size_flags_horizontal = 3
text = "SP.ATTACK:"

[node name="Value" type="Label" parent="Stats/SPATTACK"]
layout_mode = 2
text = "000"

[node name="Bar" type="Panel" parent="Stats/SPATTACK"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarShade" type="Panel" parent="Stats/SPATTACK/Bar"]
modulate = Color(0, 0, 0, 0.207843)
layout_mode = 0
size_flags_horizontal = 3

[node name="SPDEFENSE" type="HBoxContainer" parent="Stats"]
layout_mode = 2
alignment = 1

[node name="Stat" type="Label" parent="Stats/SPDEFENSE"]
layout_mode = 2
size_flags_horizontal = 3
text = "SP.DEFENSE:"

[node name="Value" type="Label" parent="Stats/SPDEFENSE"]
layout_mode = 2
text = "000"

[node name="Bar" type="Panel" parent="Stats/SPDEFENSE"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarShade" type="Panel" parent="Stats/SPDEFENSE/Bar"]
modulate = Color(0, 0, 0, 0.207843)
layout_mode = 0
size_flags_horizontal = 3

[node name="SPEED" type="HBoxContainer" parent="Stats"]
layout_mode = 2
alignment = 1

[node name="Stat" type="Label" parent="Stats/SPEED"]
layout_mode = 2
size_flags_horizontal = 3
text = "SPEED:"

[node name="Value" type="Label" parent="Stats/SPEED"]
layout_mode = 2
text = "000"

[node name="Bar" type="Panel" parent="Stats/SPEED"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarShade" type="Panel" parent="Stats/SPEED/Bar"]
modulate = Color(0, 0, 0, 0.207843)
layout_mode = 0
size_flags_horizontal = 3

[node name="Types" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_top = 48.0
offset_right = 192.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="Types"]
layout_mode = 0
text = "Type:"

[node name="Type1" type="Sprite2D" parent="Types"]
position = Vector2(54, 0)
texture = ExtResource("4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 64, 28)

[node name="Type2" type="Sprite2D" parent="Types"]
position = Vector2(126, 0)
texture = ExtResource("4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 64, 28)

[node name="Sprites" type="Node2D" parent="."]

[node name="Front" type="Sprite2D" parent="Sprites"]
centered = false

[node name="FrontShiny" type="Sprite2D" parent="Sprites"]
centered = false

[node name="Back" type="Sprite2D" parent="Sprites"]
centered = false

[node name="BackShiny" type="Sprite2D" parent="Sprites"]
centered = false
